deploy/rustfs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rustfs-console
  namespace: web-grading
spec:
  ingressClassName: traefik
  rules:
    - host: web-dev2-rustfs.vucongtuanduong.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rustfs
                port:
                  number: 9001
    - host: web-dev2-rustfs-api.vucongtuanduong.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rustfs
                port:
                  number: 9000
